Fixed wrong background color for artist item

--- a/week-3/public/css/styles.css
+++ b/week-3/public/css/styles.css
@@ -208,6 +208,10 @@ html {
     white-space: nowrap;
 }
 
+.artist-item {
+    background-color: white;
+}
+
 .artist-description,
 .track-description {
     align-content: space-between;
